# vis-link-cli-and-skills

./: .gitignore  README.md  pyproject.toml  server.py  vislink.py
.claude/skills/connect/: SKILL.md
.claude/skills/get-spec/: SKILL.md
.claude/skills/set-encoding/: SKILL.md
.claude/skills/set-mark/: SKILL.md
.claude/skills/set-spec/: SKILL.md
.claude/skills/vl-aggregation/: SKILL.md
.claude/skills/vl-area-chart/: SKILL.md
.claude/skills/vl-bar-chart/: SKILL.md
.claude/skills/vl-data/: SKILL.md
.claude/skills/vl-encodings/: SKILL.md
.claude/skills/vl-field-types/: SKILL.md
.claude/skills/vl-heatmap/: SKILL.md
.claude/skills/vl-line-chart/: SKILL.md
.claude/skills/vl-marks/: SKILL.md
.claude/skills/vl-scatter/: SKILL.md
templates/: index.html
