[project]
name = "vis-link"
version = "0.1.0"
description = "WebSocket bridge for live Vega-Lite visualization via CLI and agent skills"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.41",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "websockets>=13",
]

[project.scripts]
vislink = "vislink:main"

[tool.hatch.build.targets.wheel]
packages = ["vislink.py", "server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
